[package]
name = "sx9-foundation-interface"
version = "7.3.1"
edition = "2021"
authors = ["CTAS Team <team@ctas.dev>"]
description = "Interface foundation service for CTAS crates - consolidates common interface dependencies"
license = "MIT"
repository = "https://github.com/ctas/ctas-6-6-mono"
keywords = ["ctas", "interface", "foundation", "cli", "web", "websocket"]
categories = ["command-line-utilities", "web-programming", "network-programming"]

[dependencies]
# Interface dependencies (RFC-9001 hashing via foundation-core)
clap = { version = "4.0", features = ["derive", "env"] }  # CLI argument parsing
reqwest = { version = "0.11", features = ["json", "stream"] }  # HTTP client
axum = { version = "0.7", features = ["macros", "ws", "tracing"] }  # Web framework
ws = "0.9"  # WebSocket library
tungstenite = { version = "0.21", features = ["native-tls"] }  # WebSocket implementation
url = "2.5"  # URL parsing and manipulation

# Core foundation dependency
sx9-foundation-core = { path = "../sx9-foundation-core", optional = true }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# CTAS-7 Gold Disk Foundation Integration (already referenced above as core dependency)

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }

[features]

# CTAS-7 Smart Crate Features (Gold Disk Integration)
default = ["foundation-integration"]
foundation-integration = ["dep:sx9-foundation-core"]
smart-crate = ["foundation-integration"]
neural-mux = ["foundation-integration"]
hash-engine = ["foundation-integration"]
unicode-assembly = ["foundation-integration"]
tesla-grade = ["foundation-integration", "neural-mux", "hash-engine"]

[lints]
workspace = true
