[package]
name = "sx9-foundation-tactical"
version = "7.3.1" 
edition = "2021"
authors = ["CTAS Development Team"]
description = "CTAS 7.0 Tactical Foundation - Steve Jobs-level UX bridge for Universal Cognigraph operations"

[lib]
name = "ctas7_foundation_tactical"

[dependencies]
# Foundation dependencies (RFC-9001 hashing via foundation-core)
sx9-foundation-core = { path = "../sx9-foundation-core", optional = true }

# Core async and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
tracing = "0.1"

# Networking and CDN bridge
axum = { version = "0.7", features = ["ws"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "trace"], optional = true }
hyper = { version = "1.0", optional = true }

# Hash-driven operations  
sled = { version = "0.34", optional = true }
hex = "0.4"

# Universal Cognigraph mathematics
petgraph = { version = "0.6", optional = true }
nalgebra = { version = "0.32", optional = true }

# WASM Scorpion integration
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true }

# Security and cryptography
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
rand = "0.8"

# Real-time communication
tokio-tungstenite = "0.21"
futures-util = "0.3"

[features]
default = ["cdn-bridge", "cognigraph", "hash-driven", "foundation-integration"]
cdn-bridge = ["axum", "tower", "tower-http", "hyper"] 
cognigraph = ["petgraph", "nalgebra"]
hash-driven = ["sled", "foundation-integration"]  # v7.3: Uses Murmur3 from foundation-core
wasm-bridge = ["wasm-bindgen", "js-sys", "web-sys"]
swift-bridge = []
# CTAS-7 Smart Crate Features (Gold Disk Integration)
foundation-integration = ["dep:sx9-foundation-core"]
smart-crate = ["foundation-integration"]
neural-mux = ["foundation-integration"]
hash-engine = ["foundation-integration"]
unicode-assembly = ["foundation-integration"]
tesla-grade = ["foundation-integration", "neural-mux", "hash-engine"]
