[package]
name = "sx9-harness"
version = "0.1.0"
edition = "2021"

[dependencies]
# Foundation crates (re-export common dependencies)
sx9-foundation-core = { path = "../sx9-foundation-core" }
sx9-foundation-interface = { path = "../sx9-foundation-interface" }
sx9-glaf-core = { path = "../sx9-glaf-core" }

# Required for derive macros (derive expands to ::serde::)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime and HTTP client (for heartbeat checks)
tokio = { version = "1", features = ["time", "net", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# NATS messaging (not in foundation)
async-nats = "0.35"

# QA gate dependencies (not in foundation)
regex = "1"
walkdir = "2"
lazy_static = "1.4"

[dev-dependencies]
tokio-test = "0.4"
anyhow = "1"
criterion = "0.5"

[[bench]]
name = "perf"
harness = false
